--- a/pageStyle.css
+++ b/pageStyle.css
@@ -17,6 +17,9 @@ header a{
 	font:22px sans-serif;
 	cursor: pointer;
 }
+header a:hover{
+	color:#8C8C8C;
+}
 header .infoRight{
 	position:absolute;
 	right: 40px;
@@ -135,7 +138,7 @@ header input[type=text]{
 }
 #page3 .title a{
 	font-size: 24px;
-	color:#E7E6E6;
+	color:#8C8C8C;
 }
 #page3 .projectBox{
 	position: absolute;
